Api documentation fix
