# src/main/java/io/marketplace/services/contact/api/delegate/BeneficiariesApiDelegateImpl.java
@@ -1,9 +1,7 @@
 package io.marketplace.services.contact.api.delegate;
 
 import io.marketplace.services.contact.api.BeneficiariesApiDelegate;
-import io.marketplace.services.contact.model.BeneficiaryAccount;
-import io.marketplace.services.contact.model.BeneficiaryAccountResponse;
-import io.marketplace.services.contact.model.BeneficiaryDto;
+import io.marketplace.services.contact.model.BeneficiaryData;
 import io.marketplace.services.contact.model.WalletResponse;
 import io.marketplace.services.contact.service.ContactService;
 import io.marketplace.services.contact.utils.Constants;
@@ -13,54 +11,15 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.UUID;
 
 import static io.marketplace.services.contact.utils.Constants.SEARCH_REQUEST_BUSINESS_DATA_BENEFICIARY;
 
 @Service
 public class BeneficiariesApiDelegateImpl implements BeneficiariesApiDelegate {
-    private static final String TEST_ACCOUNT_NUMBER = "BPI00000001";
-    private static final String DEFAUT_ACCOUNT_ID = "4f95373a-6326-4b6c-85e4-d693f4befddd";
-    private static final String DEFAUT_ACCOUNT_NAME = "John Doe";
-    private static final String SECOND_ACCOUNT_ID = "b4ed8583-db7e-3313-afdd-de5dcb288d5c";
+
 
     @Autowired
     private ContactService contactService;
-
-    @Override
-    public ResponseEntity<BeneficiaryAccountResponse> lookupBeneficiaryAccount(String accountNumber) {
-        String accountId = DEFAUT_ACCOUNT_ID;
-        if (TEST_ACCOUNT_NUMBER.equals(accountNumber)) {
-            accountId = SECOND_ACCOUNT_ID;
-        }
-
-        return ResponseEntity.ok(BeneficiaryAccountResponse
-                .builder()
-                .data(BeneficiaryAccount
-                        .builder()
-                        .accountId(UUID.fromString(accountId))
-                        .accountNumber(TEST_ACCOUNT_NUMBER)
-                        .displayName(DEFAUT_ACCOUNT_NAME)
-                        .build())
-                .build());
-    }
-
-    @Override
-    public ResponseEntity<BeneficiaryAccountResponse> lookupBeneficiaryAccountWithMobile(String mobileNumber) {
-        String accountId = DEFAUT_ACCOUNT_ID;
-        if ("84972966263".equals(mobileNumber)) {
-            accountId = SECOND_ACCOUNT_ID;
-        }
-        return ResponseEntity.ok(BeneficiaryAccountResponse
-                .builder()
-                .data(BeneficiaryAccount
-                        .builder()
-                        .accountId(UUID.fromString(accountId))
-                        .accountNumber(TEST_ACCOUNT_NUMBER)
-                        .displayName(DEFAUT_ACCOUNT_NAME)
-                        .build())
-                .build());
-    }
 
     @PXLogEventMessage(
             activityName = Constants.RECEIVING_THE_REQUEST_TO_GET_BENEFICIARY_ACTIVITY,
@@ -73,7 +32,7 @@ public class BeneficiariesApiDelegateImpl implements BeneficiariesApiDelegate {
     public ResponseEntity<WalletResponse> lookupBeneficiary(String mobileNumber,
                                                                  String accountNumber) {
 
-        List<BeneficiaryDto> beneficiaryDtoList = contactService.getBeneficiaryInformation(mobileNumber, accountNumber);
+        List<BeneficiaryData> beneficiaryDtoList = contactService.getBeneficiaryInformation(mobileNumber, accountNumber);
 
         return ResponseEntity.ok(WalletResponse
                 .builder()
